deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: empstore
  name: empstore
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: empstore
  type: NodePort
