deploy/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empstore
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: empstore.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: empstore
                port:
                  number: 8080
